    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
 - Implemented drag-scrolling with the mouse's middle button.
 - Disabled double buffering (good for debugging redraws).
 - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).
   Patches: Johannes Hofmann
+- Improved FLTK library detection at configure time.
   Patch: Frank Gevaerts

 TODO:

 - test no_proxy (set a list in dillorc).

-----------------------------------------------------------------------------


0.8.5-pre-dw-redesign-1 [internal]
- Prototype

dillo-0.8.3-pre-dw-redesign-3 [Aug 30, 2004]
 - * Fixed bug GtkDwViewport, which caused some redraws to be ignored.
   * Added GdkDwPreview.
   Patches: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-2 [Aug 28, 2004]
 - * Added images to the current state of the redesign.
     - New module Imgbuf, see doc/Imgbuf.txt for details.
   Patch: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-1 [Aug 25, 2004]
 - * Introduced an abstraction layer between Dw and Gtk+. See README-port and
     doc/DwRender.txt for more details.
   Patch: Sebastian Geerken


=============================================================================
Dillo project
=============================================================================


dillo-0.8.6 [Apr 26, 2006]

 - * Designed and implemented a dpi protocol library (libDpip.a in /dpip).
   * Added a couple of new dpip commands.
   * Fixed and uniformed the escaping of values inside dpip tags.
   * Ported the bookmarks, download, file, https, ftp and hello plugins,
     plus the dpid daemon and the rest of the source tree to use it.
   * Improved the dpi buffer reception to handle split buffers (This was
     required for handling arbitrary data streams with dpip).
   * Fixed a bug in Cache_entry_remove_raw.
   * Added a couple of "const" and C++ wrappers to dpiutil's API.
   * Fixed a serious bug with the FTP plugin that led to two downloads of the